crates/review-buddy/tests/snapshots/layout_options__layout_dusk_both_160x40.snap
---
source: crates/review-buddy/tests/layout_options.rs
expression: text(& render(& mut app))
---
 review buddy  ·  demo · 4 sources · 7 changes                                                                                                             Dusk
  1 ● All 7   2 ● liminal-hq 3   3 ● smorris 1   4 ● platform 2   5 ● gitlab.com 1
╭ queue ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── ⟨ detail ╮
│  Waiting on you · 2                                                                                                                                          │
│▌ ◐ Add a menu bar and keyboard-driven menus                                                                                                               2h │
│▌ GH review-buddy#214 · ada · review requested                                                                          ¶6   2 open   CI running       +32 −1 │
│  ● Raise muted text contrast in the light theme                                                                                                           5h │
│  GH review-buddy#209 · jo · approved by you                                                               ✓1  ✕1       ¶3                              +1 −1 │
│                                                                                                                                                              │
│  Worth a look · 2                                                                                                                                            │
│  ✕ Cache pipeline status lookups                                                                                                                          7h │
│  GL flow!1182 · priya · you're mentioned                                                                          ○1                 CI failing        +8 −2 │
│  ● Tidy zsh startup                                                                                                                                       1d │
│  GH dotfiles#31 · smorris · yours                                                                         ✓1      ○1   ¶5   2 open                     +1 −1 │
│                                                                                                                                                              │
│  Can wait · 1                                                                                                                                                │
│  · Clarify the install steps                                                                                                                              3d │
│  GL notes!12 · kai · approved by you                                                                              ○    ¶2   open                       +1 −1 │
│                                                                                                                                                              │
│  ▸ Noise · 2 bot updates · ⏎ to expand                                                                                                                       │
│                                                                                                                                                              │
│  ── That's everything.                                                                                                                                       │
│  7 in this view.                                                                                                                                             │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  p show detail  ? help  T theme  q quit
