crates/review-buddy/tests/snapshots/layout_options__layout_dusk_sources_left_100x30.snap
---
source: crates/review-buddy/tests/layout_options.rs
expression: text(& render(& mut app))
---
 review buddy  ·  demo · 4 sources · 7 changes                                                 Dusk
╭ sources ───────────────╮╭ queue ───────────────────────────────────────╮╭ liminal-hq/review-bu ⟩ ╮
│▌ ● All               7 ││  Waiting on you · 2                          ││ Add a menu bar and     │
│    every source        ││▌ ◐ Add a menu bar and keyboard-driven me… 2h ││ keyboard-driven menus  │
│  ● liminal-hq        3 ││▌ GH review-buddy#214 · ada · review requested││ ada wants ada/menus →  │
│    github.com          ││  ● Raise muted text contrast in the ligh… 5h ││ +32 −1 · 3 files · ope │
│  ● smorris           1 ││  GH review-buddy#209 · jo · approved by you  ││                        │
│    github.com          ││                                              ││ a Approve              │
│  ● platform          2 ││  Worth a look · 2                            ││                        │
│    gitlab.platform.ex… ││  ✕ Cache pipeline status lookups          7h ││  Overview   Files 3    │
│  ● gitlab.com        1 ││  GL flow!1182 · priya · you're mentioned     ││ ────────────────────── │
│    gitlab.com          ││  ● Tidy zsh startup                       1d ││ Adds a menu bar along  │
│                        ││  GH dotfiles#31 · smorris · yours            ││ the top and a Menu     │
│  Show  s to change     ││                                              ││ type that tracks the   │
│  [x] reviewing         ││  Can wait · 1                                ││ selected item.         │
│  [x] assigned          ││  · Clarify the install steps              3d ││                        │
│  [x] authored          ││  GL notes!12 · kai · approved by you         ││ • Menu::select_next    │
│  [ ] drafts            ││                                              ││ and Menu::select_prev  │
│  [ ] noise             ││  ▸ Noise · 2 bot updates · ⏎ to expand       ││ move the highlight     │
│                        ││                                              ││ …                      │
│                        ││  ── That's everything.                       ││                        │
│                        ││  7 in this view.                             ││ Reviewers              │
│                        ││                                              ││ ◌ smorris requested    │
│                        ││                                              ││ ✎ jo commented         │
│                        ││                                              ││                        │
│                        ││                                              ││ Checks                 │
│                        ││                                              ││ ● 2 passing  ◐ 1 runni │
│                        ││                                              ││ ○ 1 neutral  ↷ 1 skipp │
╰────────────────────────╯╰──────────────────────────────────────────────╯╰────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit
